vlib/v/checker/tests/struct_voidptr_field_init_err.vv
struct Example {
	example voidptr
}

fn main() {
	println(Example{
		example: get()
	})
}

fn get() string {
	return 'hello'
}
